# timer_cli

./: .gitignore  CODE_DOCUMENTATION.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SOCIAL_MEDIA.md  pyproject.toml  review_report.md  run_timer.bat  run_timer.sh  seed-prompt.md
src/: logging_setup.py  main.py  managers.py  models.py  sound.py  ui.py  utils.py
